testsuite/tests/rename/should_fail/rnfail029.stderr

rnfail029.hs:2:36: error: [GHC-69158]
    Conflicting exports for ‘map’:
       ‘Data.List.map’ exports ‘Data.List.map’
         imported qualified from ‘Data.List’ at rnfail029.hs:3:1-26
         (and originally defined in ‘base-4.18.0.0:GHC.Base.List’)
       ‘module ShouldFail’ exports ‘ShouldFail.map’
         defined at rnfail029.hs:4:1
